# TSR-AI_Traffic_Sign_Recognition

./: .gitignore  README.md  TSR-1.yml  data.yaml
.github/workflow/: test.yml
AI/ServerAI/: comunication_handler.py  consumer.py  consumer_demo.py  docker-compose.yaml  producer.py  sign_class.py  sign_rec.py
AI/YOLOv8_version_0.1/: load_model.py
AI/YOLOv8_version_0.2/: load_model.py  yolo.py
App/: main.py
Data/: Sources.txt  sign_rec.py
Data/0_Scraping/: linkLoader.py
Environments/: tsr-app.yml  tsr-server.yml  tsr-train-cuda-yolo.yml
HelpCode/: Augmentor.py  Collect_images.py  EditPictures.py  ModifyPictures.py  Settings.py
Kafka_server/: docker-compose.yaml  docker-compose.yml  prometheus.yml
PCApp/: pip.txt
PROJEKT/: backend.py  comunicationConsumer.py  comunicationProducer.py  test.py
QuickTools/: ImageToGrid.py  ImagesToVideo.py  SignFromVideoExtractor.py
RG/: CMakeLists.txt
RG/src/: main.cpp
RG/src/OBJLoader/: Model.cpp  Model.h
STMApp/: VS-FreeRTOS1_3.ioc
ServerAI/: comunication_handler.py  consumer.py  consumer_demo.py  consumer_multiprocess.py  graham_hull.py  producer.py  server_1719663560.1381388.csv
ServerALL-Beta/: consumer.py  graph.py
ServerSim/: comunication_handler.py  consumer.py  consumer_demo.py  producer.py
TSR Simulation App/: README.txt  TSR Simulation App.sln
VPNs/: client2.1_server.ovpn  client2.2_kristjan.ovpn  client2.4_patrik.ovpn  client2.5_device1.ovpn
VS-FreeRTOS1_3/: .cproject  .mxproject  .project  VS-FreeRTOS1_3 Debug.launch  main.py
YOLOv8_train/: yolo.py
YOLOv8_train_sample/: load_model.py
(+1168 files in other folders)
